--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aws-amplify": "^3.0.9",
     "aws-amplify-react": "^4.1.8",
     "react": "^16.13.1",
+    "react-countdown-circle-timer": "^2.2.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
